# wiseup-x86

./: CMakeLists.txt  LICENSE  README.md
include/: clientHandler.h  common.h  commonMethods.h  fferror.h  gpio.h  nrf24l01.h  nrfTaskMng.h  rfComm.h  spi.h
node-backend/: redis_adapter.js  sqlite_adapter.js  web-api.js
node-www/www/: index.html
node-www/www/css/: wiseup.css
node-www/www/js/: index.js
node-www/www/js/controllers/: sensorsController.js
node-www/www/js/factories/: sensorsFactory.js
node-www/www/js/services/: serverService.js
node-www/www/views/: sensors.html  templates.json
node-www/www/views/templates/: sensor.html
src/: CMakeLists.txt  clientHandler.cpp  ipc.cpp  nrfTaskMng.cpp  wiseTimer.h  wiseup.cpp
src/modules/: CMakeLists.txt
src/modules/nrf24l01/: CMakeLists.txt  nrf24l01.cpp
